[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Font/flipside/flipside.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/endgame_ui_top_stripe.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/endgame_ui_bottom_stripe.png" type="Texture" id=3]
[ext_resource path="res://EndgameScreen.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "endgame"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("endgame_ui_top_stripe:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1536.29, -0.25, 0, 0.25, 0, 512.01, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("endgame_ui_top_stripe:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 77.4944, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("endgame_ui_bottom_stripe:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -512.198, -0.25, 0, 0.25, 0, 512.038, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("endgame_ui_bottom_stripe:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 519.342, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("GameOverText:custom_colors/font_color:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.219608, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("GameOverText:custom_colors/font_color:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.478431, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("GameOverText:custom_colors/font_color:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.494118, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("GameOverText:custom_colors/font_color:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5 )
}

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "RestartAnimation"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:custom_colors/font_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.219608, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:custom_colors/font_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.478431, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:custom_colors/font_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.494118, -0.25, 0, 0.25, 0, 0.733333, -0.25, 0, 0.25, 0, 0.494118, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:custom_colors/font_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="EndgameScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="endgame_ui_bottom_stripe" type="Sprite" parent="."]
position = Vector2( -512.198, 519.342 )
texture = ExtResource( 3 )

[node name="endgame_ui_top_stripe" type="Sprite" parent="."]
position = Vector2( 1536.29, 77.4944 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "endgame"
anims/endgame = SubResource( 1 )

[node name="GameOverText" type="Label" parent="."]
margin_left = 223.0
margin_top = 187.0
margin_right = 814.0
margin_bottom = 230.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.219608, 0.478431, 0.494118, 0 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Label" parent="."]
visible = false
margin_left = 404.63
margin_top = 257.0
margin_right = 607.63
margin_bottom = 292.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.219608, 0.478431, 0.494118, 1 )
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Restart"]
anims/RestartAnimation = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
volume_db = -5.049

[node name="ScreamsPlayer" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="Restart" to="." method="_on_Restart_mouse_entered"]
[connection signal="mouse_exited" from="Restart" to="." method="_on_Restart_mouse_exited"]
